--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <h1 class="caption-education" id="caption-education-id">Образование и опыт</h1>
                     <p class="education">Если говорить о программировании, то свой первый код я написал в 1990 году на программируемом калькуляторе МК-61.
                         Потом был "Правец-8А" на Z80 процессоре и конечно же ZX Spectrum. В 1997 году я закончил обучение в Томском Университете Систем Управления и Радиоэлектронники.
-                        Получил знания о том как работает "железо" и пообщался с СМками и ЕСками. И в это время вместе со всей страной вступил эпоху персоналок.</p>
+                        Получил знания о том как работает "железо" и пообщался с СМками и ЕСками. И в это время вместе со всей страной вступил в эпоху персоналок.</p>
                 </div>
             </div>
             <div class="fixed-img-container">
